--- a/web/settlement.html
+++ b/web/settlement.html
@@ -9,7 +9,18 @@
 
     <body>
         <div class="settlement">
-            <h4>Test Settlement <div class="size">SETTLEMENT 1</div></h4>
+            <h4>settlement name <div class="size">SETTLEMENT 1</div></h4>
+            <div class="taglist">
+                <div class="tag type">town</div>
+                <div class="tag other">dwarf</div>
+                <div class="tag other">underground</div>
+            </div>
+            <div class="desc">
+                This is the town description.
+            </div>
+            <div class="govt">Monarchy</div>
+            <div class="pop">80% dwarves, 10% human, 5% gnomes, 5% other</div>
+            <div class="lang">Common, Dwarvish, Gnomish</div>
         </div>
     </body>
 </html>
