Final initial draft of html css template

--- a/web/settlement.html
+++ b/web/settlement.html
@@ -21,6 +21,12 @@
             <div class="govt">Monarchy</div>
             <div class="pop">80% dwarves, 10% human, 5% gnomes, 5% other</div>
             <div class="lang">Common, Dwarvish, Gnomish</div>
-        </div>
+            <div class="religion">Shelyn, Torag</div>
+            <div class="threats">Assault from underground monsters</div>
+            <div class="othertraits-name">City of Artisans: <div class="othertraits-desc">The settlement is famous for its craftmanship.</div></div>
+            <div class="othertraits-name">Religions Bias: <div class="othertraits-desc">Non-worshippers of Torag are not as regarded.</div></div>
+            <div class="npcs">
+                <div class="npc-name">Thaldin Frostshadow <div class="npc-desc">A former fighter, turned innkeeper.</div></div>
+            </div>
     </body>
 </html>
