--- a/web/settlement.html
+++ b/web/settlement.html
@@ -16,7 +16,8 @@
                 <div class="tag other">underground</div>
             </div>
             <div class="desc">
-                This is the town description.
+                <p>Forests Edge is a small village that is nestled in the corner where the Forest meets the Mountain Range. This small village mainly supports the export of local timber and stone to nearby cities and towns.</p>
+<p>Its local natural resources are used for miles around.  While they are nothing special, they are abundant.  The village is run and protected by the "Something Family". They own the logging and mining business that employ most of the townsfolk.</p>
             </div>
             <div class="govt">Monarchy</div>
             <div class="pop">80% dwarves, 10% human, 5% gnomes, 5% other</div>
@@ -28,5 +29,7 @@
             <div class="npcs">
                 <div class="npc-name">Thaldin Frostshadow <div class="npc-desc">A former fighter, turned innkeeper.</div></div>
             </div>
+            <div class="label">Goverment<div class="label-desc">Monarchy</div></div>
+            <div class="label-divider">Languages<div class="label-desc">Common, Dwarvish, Gnomish</div></div>
     </body>
 </html>
