--- a/web/settlement.html
+++ b/web/settlement.html
@@ -19,17 +19,16 @@
                 <p>Forests Edge is a small village that is nestled in the corner where the Forest meets the Mountain Range. This small village mainly supports the export of local timber and stone to nearby cities and towns.</p>
 <p>Its local natural resources are used for miles around.  While they are nothing special, they are abundant.  The village is run and protected by the "Something Family". They own the logging and mining business that employ most of the townsfolk.</p>
             </div>
-            <div class="govt">Monarchy</div>
-            <div class="pop">80% dwarves, 10% human, 5% gnomes, 5% other</div>
-            <div class="lang">Common, Dwarvish, Gnomish</div>
-            <div class="religion">Shelyn, Torag</div>
-            <div class="threats">Assault from underground monsters</div>
-            <div class="othertraits-name">City of Artisans: <div class="othertraits-desc">The settlement is famous for its craftmanship.</div></div>
-            <div class="othertraits-name">Religions Bias: <div class="othertraits-desc">Non-worshippers of Torag are not as regarded.</div></div>
+            <div class="label">Goverment<div class="label-desc">Monarchy</div></div>
+            <div class="label">Population<div class="label-desc">80% dwarves, 10% human, 5% gnomes, 5% other</div></div>
+            <div class="label-divider">Languages<div class="label-desc">Common, Dwarvish, Gnomish</div></div>
+            <div class="label">Religion<div class="label-desc">Shelyn, Torag</div></div>
+            <div class="label">Threats<div class="label-desc">Assault from underground monsters</div></div>
+            <div class="label">City of Artisans: <div class="label-desc">The settlement is famous for its craftmanship.</div></div>
+            <div class="label">Religions Bias: <div class="label-desc">Non-worshippers of Torag are not as regarded.</div></div>
             <div class="npcs">
                 <div class="npc-name">Thaldin Frostshadow <div class="npc-desc">A former fighter, turned innkeeper.</div></div>
             </div>
-            <div class="label">Goverment<div class="label-desc">Monarchy</div></div>
-            <div class="label-divider">Languages<div class="label-desc">Common, Dwarvish, Gnomish</div></div>
+
     </body>
 </html>
